<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.natallia.radaman.activitywith3fragments.Fragment1">

    <LinearLayout
        android:id="@+id/fragment1_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/buttonToSecondFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/open2Fragment" />

        <Button
            android:id="@+id/buttonToThirdFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/open3Fragment" />
    </LinearLayout>

</FrameLayout>
